# ITI-QtQML

./: README.md
Task01_Gallery/: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
Task01_Gallery/Backend/: info.cpp
Task01_Gallery/Pages/: AboutPopupPage.qml  GalleryPage.qml
Task01_Gallery/Widgets/: AboutWidget.qml  GalleryWidget.qml  HumidityWidget.qml
Task02_Calculator/: CMakeLists.txt  MButton.qml  Main.qml  main.cpp  resources.qrc
Task03_NetworkManager/: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
Task03_NetworkManager/Backend/: BluetoothManager.cpp  BluetoothManager.hpp  NetworkManager.cpp  NetworkManager.hpp  WifiManager.cpp  WifiManager.hpp
Task03_NetworkManager/Pages/: BluetoothPage.qml  WiFiPage.qml
Task04_Weather/: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
Task04_Weather/API/: WeatherAPI.qml
Task04_Weather/Components/: WindowBar.qml
Task05_RPiControlLED/: CMakeLists.txt  Main.qml  README.md  main.cpp
Task05_RPiControlLED/LedControl/: led.cpp  led.hpp
Task06_MediaPlayer/: CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
Task06_MediaPlayer/Backend/: BluetoothManager.cpp  BluetoothManager.hpp  USBManager.cpp  USBManager.hpp
Task06_MediaPlayer/Components/: WindowBar.qml  WindowResize.qml
Task06_MediaPlayer/components/: MediaCard.qml
Task06_MediaPlayer/pages/: Audio.qml  Radio.qml  Video.qml  radio.qml
Task_1/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
Task_1/Backend/: info.cpp  info.hpp
Task_1/MainScreenWidgets/: AboutWidget.qml  GalleryWidget.qml  HumidityWidget.qml  TempWidget.qml
Task_1/Pages/: GalleryPage.qml  ImagePopupPage.qml  PopupPage.qml
Task_1/Widgets/: AboutWidget.qml  HumidityWidget.qml  TempWidget.qml  WindWidget.qml
